--- a/package.json
+++ b/package.json
@@ -4,18 +4,25 @@
   "description": "SAPUI5 with Redux integration",
   "main": "index.js",
   "scripts": {
-    "start": "ui5 serve -o index.html"
+    "start": "ui5 serve -o index.html",
+    "qunit-test": "node test/unit/qunit-node-server/headless-runner.js",
+    "start-qunit-test": "node test/unit/qunit-node-server/qunit-node-server.js",
+    "qunit-server": "node test/unit/qunit-node-server/qunit-node-server.js"
   },
   "author": "Adrians Magons",
   "license": "ISC",
   "devDependencies": {
     "@ui5/cli": "^4.0.14",
-    "redux": "^5.0.1",
+    "express": "^4.21.2",
+    "puppeteer": "^19.7.1",
     "ui5-tooling-modules": "^3.24.14"
   },
   "ui5": {
-        "dependencies": [
-            "ui5-tooling-modules"
-        ]
-    }
+    "dependencies": [
+      "ui5-tooling-modules"
+    ]
+  },
+  "dependencies": {
+    "cors": "^2.8.5"
+  }
 }
